--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,11 +3,11 @@
 
     <style name="Theme.ChampionsFormula" parent="Theme.AppCompat.Light.NoActionBar"/>
 
-    <style name="CustomButton">
+    <style name="CustomButton" parent="Widget.Material3.Button.TextButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/dry_red</item>
         <item name="android:textSize">24sp</item>
         <item name="android:fontFamily">@fonts/Notable</item>
     </style>
